// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button ComplexContent smoke-test 1`] = `
<button type="button"
        aria-label="Button"
        class="px-4 py-2 bg-cyan-500 text-white rounded-full shadow-sm"
>
  <strong>
    Bold Button
  </strong>
</button>
`;

exports[`Components/Button LabelAsContent play-test 1`] = `
<button type="button"
        aria-label="Button"
        class="px-4 py-2 bg-cyan-500 text-white rounded-full shadow-sm"
>
  Button
</button>
`;
